--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,21 @@
 <!-- HTML for app Module -->
+
 <body>
-  <header id="portfolio-body" class="mdl-layout__header mdl-layout__header--transparent">
-    <div id="portfolio-header">
+  <header class="mdl-layout__header mdl-layout__header--transparent">
+    <div id="portfolio-body">
       <h1>TK Tran</h1>
       <div id="slogan">
-        <div class="word"><span class="myWord">Software Engineer</span>
-          <div class="cursor"></div>
-        </div>
+        <span>Software Engineer</span>
       </div>
       <div>
         <p>👁‍🗨 Providence</p>
       </div>
+      <div>
+        <a>My Projects</a>
+      </div>
     </div>
   </header>
-  <footer id="connect" class="mdl-mini-footer">
+  <footer class="mdl-mini-footer">
     <ul id="footer-links" class="mdl-mini-footer__link-list">
       <li>
         <a href="https://www.github.com/TKXYZ">
