--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -48,7 +48,15 @@ footer {
   color: white;
   text-transform: uppercase;
   letter-spacing: 6px;
-  font-size: 2em;
+  font-size: 1.5em;
+}
+
+#location {
+  font-weight: normal;
+  color: white;
+  text-transform: uppercase;
+  letter-spacing: 6px;
+  font-size: 1.5em;
 }
 
 #footer-links {
