--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,11 +7,8 @@
       <div id="slogan">
         <span>Software Engineer</span>
       </div>
-      <div>
-        <p>👁‍🗨 Providence</p>
-      </div>
-      <div>
-        <a>My Projects</a>
+      <div id="location">
+        <span>👁‍🗨 Providence</span>
       </div>
     </div>
   </header>
