--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,2 @@
-<app-home></app-home>
+<!-- Informs Angular where to render the view of the component of a selected route -->
+<router-outlet></router-outlet>
