--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,1 +1,5 @@
-<p>projects works!</p>
+<div class="mdl-grid">
+  <div class="mdl-cell mdl-cell--4-col">project 1</div>
+  <div class="mdl-cell mdl-cell--4-col">project 2</div>
+  <div class="mdl-cell mdl-cell--4-col">project 3</div>
+</div>
