--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -58,6 +58,14 @@ footer {
   font-size: 1.5em;
 }
 
+#projects {
+  font-weight: normal;
+  color: white;
+  text-transform: uppercase;
+  letter-spacing: 6px;
+  font-size: 1.5em;
+}
+
 #footer-links {
   margin: auto;
 }
