--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,7 +9,7 @@
         <span>{{location}}</span>
       </div>
       <div id="projects">
-        <a routerLink="projects" routerLinkActive="active"><span>{{projects}}</span></a>
+        <a routerLink="/projects" routerLinkActive="active"><span>{{projects}}</span></a>
       </div>
     </div>
   </header>
@@ -38,5 +38,3 @@
     </ul>
   </footer>
 </body>
-
-<router-outlet></router-outlet>
