--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,5 +1,9 @@
-<div class="mdl-grid">
+<div class="container">
+  <span>Work in progress :)</span>
+</div>
+
+<!-- <div class="mdl-grid">
   <div class="mdl-cell mdl-cell--4-col">PROJECT 1</div>
   <div class="mdl-cell mdl-cell--4-col">PROJECT 2</div>
   <div class="mdl-cell mdl-cell--4-col">PROJECT 3</div>
-</div>
+</div> -->
